--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -12,6 +12,7 @@
 		{% set listLength = 7 %}
 	{% endif %}
 
+	{% cache 'contentListTopNews' ~ listId ~ listLength { gen: contentList } %}
 	{% gimmelist item from contentListItems|limit(listLength) with {contentListName: "Top news"} %}
 
     {% if loop.first %}
@@ -45,6 +46,7 @@
     	</div>
     {% endif %}
 	{% endgimmelist %}
+	{% endcache %}
 
 					</div>
 
