--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -74,6 +74,13 @@
 
 				{% include 'elements/most.html.twig' with {'class' : 'marginBottom30'} %}
 
+				<div class="subscribe subscribe--banner marginBottom30">
+					<h3 class="subscribe__headline">Subscribe</h3>
+					<a href="#" class="subscribe__image"><img src="{{ asset('theme/img/subscribe.png') }}" alt=""></a>
+					<p class="subscribe__text">Your subscription helps support independent investigative journalism</p>
+					<a href="#" class="button button--color">Subscribe</a>
+				</div>
+
 				{% if themeSetting('sidebar_switch') %}
 					{% include 'partials/featured-author.html.twig'  %}
 				{% endif %}
