--- a/public/css/elements/button.sass
+++ b/public/css/elements/button.sass
@@ -1,4 +1,5 @@
 .button
+  font-family: $fontSansSerif
   font-size: 1.6rem
   color: $colorDark
   font-weight: 600
@@ -14,3 +15,6 @@
     color: $colorWhite
     background: $colorTheme
     border: none
+    &:hover
+      color: $colorWhite
+      background: #a1c175
