--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -2,17 +2,20 @@
 
 {% block list %}
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
+        {% for singleItem in item %}
+            Hello {{ item }}!
+        {% endfor %}
         {% import _self as knp_menu %}
-  <div class="navigation">        
-    <nav class="container">
-      <div id="header" class="navigation__header okayNav-header">
-            <nav role="navigation" id="nav-main" class="okayNav">
-                <ul>
-            {{ block('children') }}
-                </ul>
-            </nav>
-        </div><!-- /header -->
-    </nav> 
-  </div>
+        <div class="navigation">        
+            <nav class="container">
+            <div id="header" class="navigation__header okayNav-header">
+                    <nav role="navigation" id="nav-main" class="okayNav">
+                        <ul>
+                    {{ block('children') }}
+                        </ul>
+                    </nav>
+                </div><!-- /header -->
+            </nav> 
+        </div>
     {% endif %}
 {% endblock %}
