--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -10,7 +10,8 @@
     display: flex
     align-items: center
     img
-      height: 25px
+      height: 100%;
+      width: 50px;
       margin-right: 15px
       opacity: 0.6
       image-rendering: -moz-crisp-edges
@@ -26,7 +27,7 @@
     font-size: 1.15em
     font-weight: 200
     +sm
-      font-size: 3.5em
+      font-size: 1.5em
 
   .weather-place
     font-size: 1.15em
