--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -5,8 +5,8 @@
         {% import _self as knp_menu %}
         <div class="navigation">        
             <nav class="container">
-            <div id="header" class="navigation__header okayNav-header">
-                    <nav role="navigation" id="nav-main" class="okayNav">
+            <div id="header">
+                    <nav>
                         <ul>
                     {{ block('children') }}
                         </ul>
