--- a/views/widgets/mainNavAMP.html.twig
+++ b/views/widgets/mainNavAMP.html.twig
@@ -5,7 +5,7 @@
         {% import _self as knp_menu %}
         <nav role="navigation" class="nav header__nav okayNav" id="nav">
          <ul>
-            1
+            {{ block('children') }}
           </ul>
         </nav>
     {% endif %}
