--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -2,6 +2,8 @@
 
 {% block list %}
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
+    {{ item }}
+    {{ item[0] }}
         {% import _self as knp_menu %}
         <div class="navigation">        
             <nav class="container">
