--- a/views/author.html.twig
+++ b/views/author.html.twig
@@ -14,6 +14,7 @@
 
       <div class="col-md-9 col-sm-12 col-xs-12">
         {% gimme author with { slug: app.request.attributes.get('authorSlug') } %}
+        {{ author }}
         {% set currentAuthor = author %} 
 
         <div class="authorMetadata marginTop30 marginBottom30">       
