--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -21,13 +21,13 @@
 
 
             <div class="row">
-                {% gimmelist route from routes %}
+                {% gimmelist route from routes without {route: "Agbs"} %}
 
                 <div class="col-6 col-md">
                     <h5>{{ route.name }}</h5>
                     <ul class="list-unstyled text-small">
 
-                        {% gimmelist subRoute from routes with {parent: route.name} without {parent: "Agbs"} %}
+                        {% gimmelist subRoute from routes with {parent: route.name} %}
 
 
                             <li><a class="text-muted" href={{ url(subRoute) }}>{{ subRoute.name }}</a></li>
