--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -21,7 +21,7 @@
 
 
             <div class="row">
-                {% gimmelist route from routes without {parent: "Agbs"} %}
+                {% gimmelist route from routes without {route.name: "Agbs"} %}
 
                 <div class="col-6 col-md">
                     <h5>{{ route.name }}</h5>
