--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -6,7 +6,7 @@
             <div class="row">
                 {% gimmelist route from routes without {parent: "Agbs"} %}
 
-                    {{ dump route }}
+                    {{ dump (route) }}
                 <div class="col-6 col-md">
                     <h5>{{ route.name }}</h5>
 
