--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -4,7 +4,7 @@
 
 
             <div class="row">
-                {% gimmelist route from routes without {name: "Agbs"} %}
+                {% gimmelist route from routes without {name:  ["Agbs"] } %}
 
                 <div class="col-6 col-md">
                     <h5>{{ route.name }}</h5>
