--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -4,14 +4,14 @@
 
 
             <div class="row">
-                {% gimmelist route from routes without {slug:  "agbs" } %}
+                {% gimmelist route from routes %}
 
                 <div class="col-6 col-md">
                     <h5>{{ route.name }}</h5>
 
                     <ul class="list-unstyled text-small">
 
-                        {% gimmelist subRoute from routes with {parent: route.name} %}
+                        {% gimmelist subRoute from routes with {parent: route.name} without {name:  "Agbs" } %}
 
 
                             <li><a class="text-muted" href={{ url(subRoute) }}>{{ subRoute.name }}</a></li>
