--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -4,27 +4,28 @@
 
 
             <div class="row">
-                {% gimmelist route from routes %}
+{#                {% gimmelist route from routes %}#}
 
-                    {{ dump (route) }}
+                    {% for route in gimmelist routes %}
 
                 <div class="col-6 col-md">
                     <h5>{{ route.name }}</h5>
-
-                    <ul class="list-unstyled text-small">
-
-                        {% gimmelist subRoute from routes without {route.name:  "Agbs" } with {parent: route.name} %}
-
-
-                            <li><a class="text-muted" href={{ url(subRoute) }}>{{ subRoute.name }}</a></li>
-
-                        {% endgimmelist %}
-
-                    </ul>
                 </div>
+{#                    <ul class="list-unstyled text-small">#}
+
+{#                        {% gimmelist subRoute from routes without {route.name:  "Agbs" } with {parent: route.name} %}#}
 
 
-                {% endgimmelist %}
+{#                            <li><a class="text-muted" href={{ url(subRoute) }}>{{ subRoute.name }}</a></li>#}
+
+{#                        {% endgimmelist %}#}
+
+{#                    </ul>#}
+{#                </div>#}
+                    {% endfor %}
+
+
+{#                {% endgimmelist %}#}
 
             </div>
 
