--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -4,28 +4,25 @@
 
 
             <div class="row">
-{#                {% gimmelist route from routes %}#}
-
-                    {% for route in gimmelist.routes %}
+                {% gimmelist route from routes %}
 
                 <div class="col-6 col-md">
                     <h5>{{ route.name }}</h5>
+
+                    <ul class="list-unstyled text-small">
+
+                        {% gimmelist subRoute from routes with {parent: route.name} %}
+
+
+                            <li><a class="text-muted" href={{ url(subRoute) }}>{{ subRoute.name }}</a></li>
+
+                        {% endgimmelist %}
+
+                    </ul>
                 </div>
-{#                    <ul class="list-unstyled text-small">#}
-
-{#                        {% gimmelist subRoute from routes without {route.name:  "Agbs" } with {parent: route.name} %}#}
 
 
-{#                            <li><a class="text-muted" href={{ url(subRoute) }}>{{ subRoute.name }}</a></li>#}
-
-{#                        {% endgimmelist %}#}
-
-{#                    </ul>#}
-{#                </div>#}
-                    {% endfor %}
-
-
-{#                {% endgimmelist %}#}
+                {% endgimmelist %}
 
             </div>
 
