--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -8,23 +8,26 @@
         {#      get the available routes          #}
         {% gimmelist route from routes %}
 
+            {{ dump(route) }}
+
+            {#      exclude sub footer          #}
             {% if route.name != "Agbs" %}
 
 
-            <div class="col-6 col-md">
-                <h5>{{ route.name }}</h5>
+                <div class="col-6 col-md">
+                    <h5>{{ route.name }}</h5>
 
-                <ul class="list-unstyled text-small">
+                    <ul class="list-unstyled text-small">
 
-                    {% gimmelist subRoute from routes with {parent: route.name} %}
+                        {% gimmelist subRoute from routes with {parent: route.name} %}
 
 
-                        <li><a class="text-muted" href={{ url(subRoute) }}>{{ subRoute.name }}</a></li>
+                            <li><a class="text-muted" href={{ url(subRoute) }}>{{ subRoute.name }}</a></li>
 
-                    {% endgimmelist %}
+                        {% endgimmelist %}
 
-                </ul>
-            </div>
+                    </ul>
+                </div>
             {% endif %}
 
 
