--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -9,7 +9,7 @@
         {% gimmelist route from routes %}
 
 
-        {% gimmelist s from routes with {parent: route.name} %}
+        {% gimmelist s from routes with {parent: route.name}|limit(1) %}
 
 
 
