--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -9,7 +9,7 @@
         {% gimmelist route from routes %}
 
 
-        {% gimmelist s from routes|limit(1) with {parent: route.name} %}
+{#        {% gimmelist s from routes|limit(1) with {parent: route.name} %}#}
 
 
 
@@ -33,7 +33,7 @@
                 </div>
             {% endif %}
 
-        {% endgimmelist %}
+{#        {% endgimmelist %}#}
 
         {% endgimmelist %}
 
