--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -1,18 +1,21 @@
 <div class="header__search col-12 col-sm-4 d-flex flex-column justify-content-center align-items-center mt-3">
-        <label class="searchBox" for="searchInp" >
-            <form id="search" name="search_articles" method="GET" action="/app_dev.php/search">
-                <input id="searchInp" type="text" name="q" value="">
-            </form>
-        </label>
-        <p>Search</p>
+{#        <label class="searchBox" for="searchInp" >#}
+{#            <form id="search" name="search_articles" method="GET" action="/app_dev.php/search">#}
+{#                <input id="searchInp" type="text" name="q" value="">#}
+{#            </form>#}
+{#        </label>#}
+{#        <p>Search</p>#}
+
+    <div class="form__group">
+        <input type="text" class="form__input" placeholder="Full name" id="name" required>
+        <label for="name" class="form__label">Full name</label>
+    </div>
+
 </div>
 
 
 
-<div class="form__group">
-    <input type="text" class="form__input" placeholder="Full name" id="name" required>
-    <label for="name" class="form__label">Full name</label>
-</div>
+
 
 <script>
 
