--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -35,7 +35,7 @@
         color: inherit;
         padding: 1.5rem 2rem;
         border-radius: 2px;
-        background-color: rbga(#fff, 0.5);
+        background-color: #e9ecef7d;
         border: none;
         border-bottom: 3px solid transparent;
         width: 90%;
