--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -5,12 +5,12 @@
 {#            </form>#}
 {#        </label>#}
 {#        <p>Search</p>#}
-
+<div class="header__search col-12 col-sm-4 d-flex flex-column justify-content-center align-items-center mt-3">
     <form class="form__group" method="GET" action="/app_dev.php/search">
         <input type="text" class="form__input" placeholder="Suchen nach..." id="name" required>
         <label for="name" class="form__label">Suchen nach...</label>
     </form>
-
+</div>
 {#</div>#}
 
 
