--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -1,2 +1,18 @@
 {% extends 'knp_menu.html.twig' %}
 {# {% dump(item.children) %} #}
+{% block list %}
+    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
+        {% import _self as knp_menu %}
+        <div class="navigation">
+            <nav class="container">
+            <div id="header" class="navigation__header okayNav-header">
+                    <nav role="navigation" id="nav-main" class="okayNav">
+                        <ul>
+                    {{ block('children') }}
+                        </ul>
+                    </nav>
+                </div><!-- /header -->
+            </nav>
+        </div>
+    {% endif %}
+{% endblock %}
