--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -1,18 +1,28 @@
 {% extends 'knp_menu.html.twig' %}
-{# {% dump(item.children) %} #}
+ {% dump(item.children) %}
 {% block list %}
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% import _self as knp_menu %}
-        <div class="navigation">
-            <nav class="container">
-            <div id="header" class="navigation__header okayNav-header">
-                    <nav role="navigation" id="nav-main" class="okayNav">
-                        <ul>
-                    {{ block('children') }}
-                        </ul>
-                    </nav>
-                </div><!-- /header -->
+{#        <div class="navigation">#}
+{#            <nav class="container">#}
+{#            <div id="header" class="navigation__header okayNav-header">#}
+{#                    <nav role="navigation" id="nav-main" class="okayNav">#}
+{#                        <ul>#}
+{#                    {{ block('children') }}#}
+{#                        </ul>#}
+{#                    </nav>#}
+{#                </div><!-- /header -->#}
+{#            </nav>#}
+{#        </div>#}
+
+
+
+        <div class="nav-scroller py-1 mb-2">
+            <nav class="nav d-flex justify-content-between">
+                <a class="p-2 text-muted" href="#">{{ block('children') }}</a>
+
             </nav>
         </div>
+
     {% endif %}
 {% endblock %}
