--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -3,36 +3,36 @@
 {% block list %}
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% import _self as knp_menu %}
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+{#        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">#}
+{#            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">#}
+{#                <span class="navbar-toggler-icon"></span>#}
+{#            </button>#}
 
-            <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Centered nav only <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-                  
-                </ul>
-            </div>
-        </nav>
+{#            <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">#}
+{#                <ul class="navbar-nav">#}
+{#                    <li class="nav-item active">#}
+{#                        <a class="nav-link" href="#">Centered nav only <span class="sr-only">(current)</span></a>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="#">Link</a>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link disabled" href="#">Disabled</a>#}
+{#                    </li>#}
 
-
+{#                </ul>#}
+{#            </div>#}
+{#        </nav>#}
 
 
-{#        <div class="nav-scroller py-1 mb-2">#}
-{#            <nav class="nav d-flex justify-content-between">#}
-{#                <a class="p-2 text-muted" href="#">{{ block('children') }}</a>#}
 
-{#            </nav>#}
-{#        </div>#}
+
+        <div class="nav-scroller py-1 mb-2">
+            <nav class="nav d-flex justify-content-between">
+                <a class="p-2 text-muted" href="#">{{ block('children') }}</a>
+
+            </nav>
+        </div>
 
     {% endif %}
 {% endblock %}
