--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -22,43 +22,22 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
-                <ul class="navbar-nav">
-{#                    <li class="nav-item active">#}
-{#                        <a class="nav-link" href="#">Centered nav only <span class="sr-only">(current)</span></a>#}
-{#                    </li>#}
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-{#                    <li class="nav-item">#}
-{#                        <a class="nav-link disabled" href="#">Disabled</a>#}
-{#                    </li>#}
 
-                </ul>
+            <div class="nav-scroller py-1 mb-2" id="navbarsExample08">
+                <nav class="nav d-flex justify-content-between">
+                    <a class="p-2 text-muted" href="#">World</a>
+                    <a class="p-2 text-muted" href="#">U.S.</a>
+                    <a class="p-2 text-muted" href="#">Technology</a>
+                    <a class="p-2 text-muted" href="#">Design</a>
+                    <a class="p-2 text-muted" href="#">Culture</a>
+                    <a class="p-2 text-muted" href="#">Business</a>
+                    <a class="p-2 text-muted" href="#">Politics</a>
+                    <a class="p-2 text-muted" href="#">Opinion</a>
+                    <a class="p-2 text-muted" href="#">Science</a>
+                    <a class="p-2 text-muted" href="#">Health</a>
+                    <a class="p-2 text-muted" href="#">Style</a>
+                    <a class="p-2 text-muted" href="#">Travel</a>
+                </nav>
             </div>
         </nav>
 
