--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -16,15 +16,8 @@
     {#        </div>#}
 
 
-    <nav class="nav d-flex justify-content-between">
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08"
-                aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-
-        <div class="nav-scroller py-1 mb-2" id="navbarsExample08">
+    <div class="nav-scroller py-1 mb-2">
+        <nav class="nav d-flex justify-content-between">
             <a class="p-2 text-muted" href="#">World</a>
             <a class="p-2 text-muted" href="#">U.S.</a>
             <a class="p-2 text-muted" href="#">Technology</a>
@@ -37,8 +30,8 @@
             <a class="p-2 text-muted" href="#">Health</a>
             <a class="p-2 text-muted" href="#">Style</a>
             <a class="p-2 text-muted" href="#">Travel</a>
-        </div>
-    </nav>
+        </nav>
+    </div>
 
 
     {#    {% endif %}#}
