--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -16,7 +16,12 @@
     {#        </div>#}
 
 
-    <div class="nav-scroller py-1 mb-2">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+
+    <div class="nav-scroller py-1 mb-2" id="navbarsExample08">
         <nav class="nav d-flex justify-content-between">
             <a class="p-2 text-muted" href="#">World</a>
             <a class="p-2 text-muted" href="#">U.S.</a>
