--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -21,8 +21,8 @@
     </button>
 
 
-    <div class="nav-scroller py-1 mb-2" id="navbarsExample08">
-        <nav class="nav d-flex justify-content-between">
+    <div class="nav-scroller py-1 mb-2" >
+        <nav class="nav d-flex justify-content-between" id="navbarsExample08">
             <a class="p-2 text-muted" href="#">World</a>
             <a class="p-2 text-muted" href="#">U.S.</a>
             <a class="p-2 text-muted" href="#">Technology</a>
